# pipecat-firewall

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: minimal_bot.py
src/pipecat_firewall/: __init__.py  firewall.py  frames.py  refusals.py  signals.py  types.py
src/pipecat_firewall/detectors/: __init__.py  base.py  pii_extraction.py  policy_override.py  prompt_injection.py
tests/: conftest.py  corpus.py  test_detectors_pii_extraction.py  test_detectors_policy_override.py  test_detectors_prompt_injection.py  test_detectors_registry.py  test_firewall_block.py  test_firewall_flag.py
