[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pipecat-firewall"
version = "0.1.0"
description = "Real-time adversarial-input firewall for Pipecat voice agents — blocks prompt injection, PII-extraction, and policy-override before the LLM acts on it."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Rushil Jaiswal" }]
keywords = [
    "pipecat",
    "voice-agents",
    "llm",
    "security",
    "firewall",
    "prompt-injection",
    "guardrails",
    "pii",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Verified against the pipecat-ai 0.0.x line (0.0.98–0.0.108). The frame API
# moves significantly between major lines — pipecat-ai 1.x restructures core and
# changes frame signatures — so we cap below 1.0 to the range this package was
# actually tested against. 1.x support is future work.
dependencies = ["pipecat-ai>=0.0.98,<1.0"]

[project.optional-dependencies]
# Opt-in fuzzy LLM-classifier layer. The base package stays deterministic and
# zero-latency; this only matters if you pass an llm_classifier to the firewall.
llm = ["openai>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.urls]
Homepage = "https://github.com/rushjais/pipecat-firewall"
Repository = "https://github.com/rushjais/pipecat-firewall"
Issues = "https://github.com/rushjais/pipecat-firewall/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pipecat_firewall"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# signals.py is curated regex data; wrapping the long pattern literals across
# lines hurts readability and risks introducing errors in the patterns.
"src/pipecat_firewall/signals.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
